# abcde

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATASET.md  README.md  check_ngrams_progress.sh  collect_user_posts.py  collect_user_posts_reddit.py  collect_user_posts_tusc.py  compute_features.py  compute_linecounts.sh  count-instances.sh  extract_reddit_test_data.sh  extract_tusc_test_data.sh  helpers.py  identify_self_users.py  identify_self_users_reddit.py  identify_self_users_tusc.py  merge_dataset.py  merge_google_ngrams.py  monitor_reddit_pipeline.sh  ngrams_topk_filter_rows.py  ngrams_topk_map.py  ngrams_topk_reduce.py  process_ai_text.py  process_ngrams.py  process_reddit.py  process_spinner.py  process_tusc.py  process_tusc_data.py  pyproject.toml  run_ai_text_pipeline.sh  run_google_ngrams.sh  run_merge_google_ngrams.sh  run_ngrams_topk_filter_rows.sh  run_ngrams_topk_map.sh  run_ngrams_topk_reduce.sh  run_pii_pipeline.sh  run_reddit_pii_detection.sh  run_reddit_pii_pipeline.sh  (+17 more)
core/: cluster.py  data_processing.py  io_utils.py
data/: BPM-bodywords-full.txt  COG-thinking-words-categorized.json  COG-thinking-words.txt  DMG-country-list.txt  DMG-gender-list.txt  DMG-religion-list.csv  DMG-soc_2018_direct_match_title_file.xlsx  NRC-CombinedWarmth-Lexicon.txt  NRC-MoralTrustworthy-Lexicon.txt  NRC-SocialWarmth-Lexicon.txt  taboo-word-list.csv
download/: download-reddit.sh  extract-data.sh
download-google-books-ngrams/: README.md  create-google-books-ngram-urls.sh  download-google-books-ngrams.sh  extract-google-books-ngrams.sh  google-books-ngram-urls.html  google-books-ngram-urls.txt
download-reddit/: README.md  create-reddit-urls.sh  extract-data.sh  reddit-comment-urls.txt  reddit-posts-urls.txt
reddit/: data_loader.py  user_loader.py
reddit_linecounts/: RS_2011-05_linecount  RS_2011-06_linecount  RS_2011-07_linecount  RS_2011-08_linecount  RS_2011-09_linecount  RS_2011-10_linecount  (+134 more)
(+147 files in other folders)
