[project]
name = "abcde"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dask-jobqueue>=0.9.0",
    "dask[distributed]>=2025.3.0",
    "flashtext>=2.7",
    "numpy>=2.2.6",
    "orjson>=3.10.18",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "requests>=2.32.3",
    "sjsonl",
    "spacy>=3.8.7",
    "tqdm>=4.67.1",
]